// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestGroup filtering group filtering 1`] = `
Array [
  TestGroup {
    "afterAllPointers": Array [],
    "afterEachPointers": Array [],
    "beforeAllPointers": Array [],
    "beforeEachPointers": Array [],
    "describePointers": Array [],
    "logs": Array [],
    "maxSamples": Array [
      undefined,
      undefined,
      undefined,
    ],
    "maxTestRuntime": Array [
      undefined,
      undefined,
      undefined,
    ],
    "name": "group two",
    "pass": false,
    "performanceEnabled": Array [
      false,
      false,
      false,
    ],
    "reason": "Test suite group two passed successfully.",
    "reportAverage": Array [
      undefined,
      undefined,
      undefined,
    ],
    "reportMax": Array [
      undefined,
      undefined,
      undefined,
    ],
    "reportMedian": Array [
      undefined,
      undefined,
      undefined,
    ],
    "reportMin": Array [
      undefined,
      undefined,
      undefined,
    ],
    "reportStandardDeviation": Array [
      undefined,
      undefined,
      undefined,
    ],
    "reportVariance": Array [
      undefined,
      undefined,
      undefined,
    ],
    "roundDecimalPlaces": Array [
      undefined,
      undefined,
      undefined,
    ],
    "testFunctionPointers": Array [
      7,
      8,
      9,
    ],
    "testMessages": Array [
      "",
      "",
      "",
    ],
    "testNames": Array [
      "test one",
      "test two",
      "test three",
    ],
    "testThrows": Array [
      false,
      false,
      true,
    ],
    "tests": Array [
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 5831.330077886581,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test one",
        "negated": false,
        "pass": true,
        "performance": false,
        "rawVariance": 0,
        "runTime": -0.7732858657836914,
        "stack": null,
        "start": 5830.556792020798,
        "stdDev": 0,
        "times": Array [
          0.115,
        ],
        "variance": 0,
      },
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 5897.369734048843,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test two",
        "negated": false,
        "pass": false,
        "performance": false,
        "rawVariance": 0,
        "runTime": -65.90146112442017,
        "stack": "Error: not a string: 0
    at start:assembly/jest-filter~anonymous|1~anonymous|1 (wasm-function[41]:15)
    at assembly/internal/call/__call (wasm-function[50]:7)",
        "start": 5831.468272924423,
        "stdDev": 0,
        "times": Array [
          65.843,
        ],
        "variance": 0,
      },
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 5897.404093980789,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test three",
        "negated": true,
        "pass": false,
        "performance": false,
        "rawVariance": 0,
        "runTime": -0.02001190185546875,
        "stack": null,
        "start": 5897.384082078934,
        "stdDev": 0,
        "times": Array [
          0.004,
        ],
        "variance": 0,
      },
    ],
    "time": 68.147,
    "todoPointers": Array [],
    "todos": Array [],
    "willRun": true,
  },
]
`;

exports[`TestGroup filtering test filtering 1`] = `
Array [
  TestGroup {
    "afterAllPointers": Array [],
    "afterEachPointers": Array [],
    "beforeAllPointers": Array [],
    "beforeEachPointers": Array [],
    "describePointers": Array [],
    "logs": Array [],
    "maxSamples": Array [
      undefined,
    ],
    "maxTestRuntime": Array [
      undefined,
    ],
    "name": "group three",
    "pass": false,
    "performanceEnabled": Array [
      false,
    ],
    "reason": "Test suite group three passed successfully.",
    "reportAverage": Array [
      undefined,
    ],
    "reportMax": Array [
      undefined,
    ],
    "reportMedian": Array [
      undefined,
    ],
    "reportMin": Array [
      undefined,
    ],
    "reportStandardDeviation": Array [
      undefined,
    ],
    "reportVariance": Array [
      undefined,
    ],
    "roundDecimalPlaces": Array [
      undefined,
    ],
    "testFunctionPointers": Array [
      12,
    ],
    "testMessages": Array [
      "",
    ],
    "testNames": Array [
      "test two",
    ],
    "testThrows": Array [
      false,
    ],
    "tests": Array [
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 6564.01185798645,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test two",
        "negated": false,
        "pass": false,
        "performance": false,
        "rawVariance": 0,
        "runTime": -0.5875160694122314,
        "stack": "Error: not a string: 0
    at start:assembly/jest-filter~anonymous|2~anonymous|1 (wasm-function[45]:15)
    at assembly/internal/call/__call (wasm-function[50]:7)",
        "start": 6563.424341917038,
        "stdDev": 0,
        "times": Array [
          0.539,
        ],
        "variance": 0,
      },
    ],
    "time": 0.635,
    "todoPointers": Array [],
    "todos": Array [],
    "willRun": true,
  },
  TestGroup {
    "afterAllPointers": Array [],
    "afterEachPointers": Array [],
    "beforeAllPointers": Array [],
    "beforeEachPointers": Array [],
    "describePointers": Array [],
    "logs": Array [],
    "maxSamples": Array [
      undefined,
    ],
    "maxTestRuntime": Array [
      undefined,
    ],
    "name": "group two",
    "pass": false,
    "performanceEnabled": Array [
      false,
    ],
    "reason": "Test suite group two passed successfully.",
    "reportAverage": Array [
      undefined,
    ],
    "reportMax": Array [
      undefined,
    ],
    "reportMedian": Array [
      undefined,
    ],
    "reportMin": Array [
      undefined,
    ],
    "reportStandardDeviation": Array [
      undefined,
    ],
    "reportVariance": Array [
      undefined,
    ],
    "roundDecimalPlaces": Array [
      undefined,
    ],
    "testFunctionPointers": Array [
      8,
    ],
    "testMessages": Array [
      "",
    ],
    "testNames": Array [
      "test two",
    ],
    "testThrows": Array [
      false,
    ],
    "tests": Array [
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 6564.496294021606,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test two",
        "negated": false,
        "pass": false,
        "performance": false,
        "rawVariance": 0,
        "runTime": -0.4530971050262451,
        "stack": "Error: not a string: 0
    at start:assembly/jest-filter~anonymous|1~anonymous|1 (wasm-function[41]:15)
    at assembly/internal/call/__call (wasm-function[50]:7)",
        "start": 6564.04319691658,
        "stdDev": 0,
        "times": Array [
          0.437,
        ],
        "variance": 0,
      },
    ],
    "time": 0.469,
    "todoPointers": Array [],
    "todos": Array [],
    "willRun": true,
  },
  TestGroup {
    "afterAllPointers": Array [],
    "afterEachPointers": Array [],
    "beforeAllPointers": Array [],
    "beforeEachPointers": Array [],
    "describePointers": Array [],
    "logs": Array [],
    "maxSamples": Array [
      undefined,
      undefined,
    ],
    "maxTestRuntime": Array [
      undefined,
      undefined,
    ],
    "name": "group one",
    "pass": false,
    "performanceEnabled": Array [
      false,
      false,
    ],
    "reason": "Test suite group one passed successfully.",
    "reportAverage": Array [
      undefined,
      undefined,
    ],
    "reportMax": Array [
      undefined,
      undefined,
    ],
    "reportMedian": Array [
      undefined,
      undefined,
    ],
    "reportMin": Array [
      undefined,
      undefined,
    ],
    "reportStandardDeviation": Array [
      undefined,
      undefined,
    ],
    "reportVariance": Array [
      undefined,
      undefined,
    ],
    "roundDecimalPlaces": Array [
      undefined,
      undefined,
    ],
    "testFunctionPointers": Array [
      2,
      4,
    ],
    "testMessages": Array [
      "",
      "",
    ],
    "testNames": Array [
      "test two",
      "test two",
    ],
    "testThrows": Array [
      false,
      true,
    ],
    "tests": Array [
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 6564.998476982117,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test two",
        "negated": false,
        "pass": false,
        "performance": false,
        "rawVariance": 0,
        "runTime": -0.4757518768310547,
        "stack": "Error: not a string: 0
    at start:assembly/jest-filter~anonymous|0~anonymous|1 (wasm-function[33]:15)
    at assembly/internal/call/__call (wasm-function[50]:7)",
        "start": 6564.522725105286,
        "stdDev": 0,
        "times": Array [
          0.454,
        ],
        "variance": 0,
      },
      TestResult {
        "actual": null,
        "average": 0,
        "decimalPlaces": 3,
        "end": 6565.500658988953,
        "expected": null,
        "hasAverage": false,
        "hasMax": false,
        "hasMedian": false,
        "hasMin": false,
        "hasStdDev": false,
        "hasVariance": false,
        "logs": Array [],
        "max": 0,
        "median": 0,
        "message": "",
        "min": 0,
        "name": "test two",
        "negated": true,
        "pass": true,
        "performance": false,
        "rawVariance": 0,
        "runTime": -0.4863240718841553,
        "stack": null,
        "start": 6565.0143349170685,
        "stdDev": 0,
        "times": Array [
          0.469,
        ],
        "variance": 0,
      },
    ],
    "time": 0.998,
    "todoPointers": Array [],
    "todos": Array [],
    "willRun": true,
  },
]
`;

exports[`TestGroup filtering test filtering with no test matching 1`] = `Array []`;
